# primex

./: .gitignore  private_key.pem  public_key.pem  pyproject.toml  requirements.txt  test.py
about/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
account/: admin.py  choices.py  managers.py  messages.py  models.py  permissions.py  serailizers.py  signals.py  telegram.py  urls.py  utils.py  validators.py  views.py
account/config/: firebase-back.json
account/migrations/: 0001_initial.py  0002_user_email.py  0002_user_groups_user_user_permissions_alter_user_role.py
account/roles/: courier.py  mixins.py  operator.py  subadmin.py
cashbox/: apps.py  permissions.py  serializers.py  services.py  urls.py  views.py
core/: celery.py  settings.py  urls.py  yasg.py
flight/: admin.py  apps.py  choices.py  forms.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
flight/static/flight/: arrival.js  baseparcel.js  box.css  (+3 more)
flight/templatetags/: i18n_switcher.py
megapay/: apps.py  serializers.py  urls.py  views.py
operation/: admin.py  apps.py  calculator.py  choices.py  filters.py  models.py  models.py.save  permissions.py  resource.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
operation/migrations/: 0001_initial.py  0002_alter_parcel_pay_satus_alter_parcel_price_and_more.py  0002_remove_direction_name.py
template/: delivery_formset2.html  delivery_print.html  index.html  my_formset.html  my_formset2.html
template/admin/: archive_change_form.html  archive_parcel_change_list.html  arrival_change_form.html  arrival_fieldset.html  base_site.html  baseparcel_change_list.html  baseparcel_tabular.html  box_baseparcel_tabular.html  box_change_form.html  box_change_list.html  box_fieldset.html  box_parcel_change_list.html  delivery_base_parcel_change_list.html  delivery_change_form.html  delivery_fieldset.html  flight_baseparcel_tabular.html  flight_box_tabular.html  flight_change_form.html  parcel_change_list.html  print_receipt.html  tabular.html  unknown_change_form.html  unknown_fieldset.html  user_change_list.html
(+4 files in other folders)
