[tool.poetry]
name = "courier_service"
version = "0.1.0"
description = ""
authors = ["Bakdolot <genry03gh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
fcm-django = "^1.0.8"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
django-2gis-maps = "^1.0.3"
djangorestframework-simplejwt = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
