[tool.poetry]
name = "courier_service"
version = "0.1.0"
description = ""
authors = ["Bakdolot <genry03gh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2"
djangorestframework = "^3.13.1"
fcm-django = "^1.0.8"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
django-2gis-maps = "^1.0.3"
djangorestframework-simplejwt = "^5.0.0"
drf-yasg = "^1.20.0"
redis = "^4.1.0"
django-redis = "^5.2.0"
Pillow = "^9.0.0"
django-cors-headers = "^3.11.0"
gunicorn = "^20.1.0"
wheel = "^0.37.1"
django-ckeditor = "^6.2.0"
platformdirs = "^2.4.1"
django-nested-admin = "^3.4.0"
django-filter = "^21.1"
django-admin-rangefilter = "^0.8.4"
pyTelegramBotAPI = "^4.4.0"
django-import-export = "^2.8.0"
celery = "^5.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
